k8s/production/ingress/ingress.yaml
# k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nest.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nest-frontend
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: nest-backend
            port:
              number: 8000
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: nest-backend
            port:
              number: 8000
      - path: /idx
        pathType: Prefix
        backend:
          service:
            name: nest-backend
            port:
              number: 8000
      - path: /integrations
        pathType: Prefix
        backend:
          service:
            name: nest-backend
            port:
              number: 8000
      - path: /a
        pathType: Prefix
        backend:
          service:
            name: nest-backend
            port:
              number: 8000
